--- a/src/pages/operate/product/product.less
+++ b/src/pages/operate/product/product.less
@@ -10,4 +10,9 @@
     .data-gird{
         flex: 1;
     }
+    .card-content{
+        // margin-top:40px;
+        // margin-left: 20px;
+        text-align: left;
+    }
 }
